--- a/README.org
+++ b/README.org
@@ -1,4 +1,5 @@
 #+TITLE: ArchRice
+Personal config files managed with git and stow
 
 * Preview
 [[./archrice.gif]]
@@ -20,5 +21,5 @@
 ~ls -a | wc -l~ = ~16~ :^)
 
 * Information
-A simlink of every file is created from the ~~/.dotfiles~ directory
+A simlink of every file is created from the ~$HOME/.dotfiles~ directory
 into the appropriate places with ~stow~.
